# vla

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: CODEX_HANDOFF.md  HISTORY_REWRITE_NOTE.md  benchmark_plan.md  claims.md  current_state_before_v1.md  differentiation_from_wam_jepa_ebm_diffusion.md  final_audit.md  optional_real_vla_adapter.md  reviewer_attacks.md  robustness_stress_tests.md  simulator_evaluator.md  theory.md  torch_learned_scorer.md  v2_gap_closure.md  v3_execution_plan.md  v4_execution_plan.md  visual_benchmark.md
experiments/: run_experiments.py  run_external_benchmark.py  run_optional_vla.py  v4_cached_evidence.py
paper/: abstract.md  appendix_claim_evidence.md  checklist.md  experiments.md  intro.md  limitations.md  llm_usage.md  method.md  outline.md  related_work.md  theory.md  variants.md
results/: calibration_sample_complexity.csv  claims_status.json  claims_status.md  component_ablation_summary.csv  controlled_seed_metrics.csv  controlled_seed_variance.csv  controlled_semantic_overselection_artifact.json  controlled_summary.csv  distractor_seed_metrics.csv  distractor_seed_variance.csv  distractor_summary.csv  external_benchmark_status.json  external_benchmark_summary.csv  failure_honesty_summary.csv  learned_seed_metrics.csv  learned_seed_variance.csv  learned_summary.csv  learned_vla_artifact.json  manifest.json  phase_diagram_summary.csv  physics_stress_summary.csv  rendered_seed_metrics.csv  rendered_seed_variance.csv  rendered_summary.csv  rendered_visual_metadata.csv  repair_artifact.json  (+21 more)
(+105 files in other folders)
