[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-tailguard-audit"
version = "0.1.0"
description = "Certified TailGuard diagnostics for VLA-style robot action candidates."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "Pillow>=10",
  "torch>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8"]
v2 = [
  "torch>=2.0",
  "transformers>=4.40,<5",
  "accelerate>=0.30",
  "safetensors>=0.4",
  "Pillow>=10",
  "opencv-python>=4.8",
  "gymnasium>=0.29",
  "lerobot>=0.4.4,<0.5",
  "num2words>=0.5.14",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
